--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@ html, body {
  text-decoration: none;
  margin-top: 20px;
  font-size: 18px;
+ font-family: 'Raleway', sans-serif;
+ font-weight: 600;
  letter-spacing: 1px;
  word-spacing: 1px;
 }
@@ -74,6 +76,8 @@ html, body {
     text-align: center;
     color: #333333;
     margin-top: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
 }
 
 .comicsText {
@@ -83,6 +87,8 @@ html, body {
     margin-top: 50px;
     font-size: 18px;
     color: #666666;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
 }
 
 .myText {
@@ -90,6 +96,9 @@ html, body {
     font-size: 28px;
     color: #333333;
     margin-top: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    
 }
 
 .comics-text {
@@ -101,6 +110,8 @@ html, body {
     padding: 20px;
     font-size: 18px;
     color: #333333;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
 }
 
 .meText {
@@ -108,6 +119,9 @@ html, body {
     font-size: 28px;
     color: #333333;
     margin-top: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+   
 }
 
 .comic-text {
@@ -119,4 +133,23 @@ html, body {
     padding: 20px;
     font-size: 18px;
     color: #333333;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+}
+
+.footer {
+    height: 30px;
+    background: #fff;
+    padding: 20px;
+}
+
+.arText {
+    font-size: 20px;
+    text-align: center;
+    color: #5FA9B4;
+    margin-top: -6px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
 }
